--- a/_posts/2020-03-07-anki.md
+++ b/_posts/2020-03-07-anki.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Anki Guide for Medical Students"
 author: "Paul Le"
-categories: documentation
+categories: projects
 tags: [documentation,sample]
 image: book.jpg
 show-image: false
