removed filler text

--- a/_posts/2020-03-07-anki.md
+++ b/_posts/2020-03-07-anki.md
@@ -1,14 +1,12 @@
 ---
 layout: post
 title: "Anki Guide for Medical Students"
-author: "Paul Le"
+author: "Durga Kullakanda"
 categories: projects
-tags: [documentation,sample]
+tags: [education]
 image: book.jpg
-show-image: false
+show-image: true
 ---
-
-# What Is This Guide?
 
 This guide is intended for medical students who are wanting to learn about **what Anki is** and **how to use it in medical school**. The Anki software is intimidating when first starting to use it, so this guide will teach the basics of navigating the program, making flashcards to study, and how to get the most benefit from studying those flashcards. Later sections will also get into the finer details of the program, which will be useful to know as you get familiar with Anki and would like to tweak things to best fit your needs.
 
@@ -50,7 +48,7 @@ This guide was written with **Anki version 2.1** and version **2.1 add-ons**, bu
 
 ## Installing add-ons
 
-Add-ons are additional features users have developed which increase the functionality of the base Anki program. 
+Add-ons are additional features users have developed which increase the functionality of the base Anki program.
 
 To install add-ons: open Anki → open 'Tools' menu → Add-ons → Get Add-ons... → type in the code from the Add-on links below
 
@@ -80,7 +78,7 @@ Let's say we want to make some cards for a lecture on childhood viral infections
 
 ![Anki%20Guide%20for%20Medical%20Students/Untitled%204.png]({{ site.github.url }}/assets/img/anki/Untitled%204.png)
 
-In Anki, click on the "Add" button. In this window, change the "Type" to "Cloze". This allows us to make fill-in-the-blank style cards, but we can also make cards in a question/answer format. For this reason, I make cards exlusively in the cloze type so that I don't have to switch back and forth and use multiple card types. 
+In Anki, click on the "Add" button. In this window, change the "Type" to "Cloze". This allows us to make fill-in-the-blank style cards, but we can also make cards in a question/answer format. For this reason, I make cards exlusively in the cloze type so that I don't have to switch back and forth and use multiple card types.
 
 We need to make a flashcard deck for these new cards to go into. Click on the Deck button (which should be set to Default when first starting out), click on the "Add" button, and give this deck a name. For this example, I've named my deck "Week 1::Childhood viral infections" (we'll see what the "::" does soon). The Add window should now look like this:
 
